# cpp-quant

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  cpp.yml  deploy-web-ui.yml  deploy.yml  deploy_engine.yml  deploy_web_ui.yml  engine_build.yml  engine_deploy.yml  web_ui_build.yaml  web_ui_deploy.yml
.github/workflows/engine/: build.yml  deploy.yml
.github/workflows/web_ui/: build.yaml  deploy.yml
backtester/: backtester.py  main.py  server.py
backtester/btcusd/: btcusd_1-min_last_week.csv  ext.py
engine/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Makefile  conanfile.py  conanfile.txt  vcpkg.json
engine/config/: dev.json  prod.json  staging.json
engine/src/: CMakeLists.txt  binance.hpp  binance_http.hpp  bus.hpp  config.hpp  config_load.hpp  main.cpp  md_binance.cpp  md_binance.hpp  oms_binance.hpp  oms_paper.cpp  oms_paper.hpp  persist_sqlite.hpp  risk.cpp  risk.hpp  strategy_sma.cpp  strategy_sma.hpp  tracing.cpp  tracing.hpp  types.hpp  ws_server.cpp  ws_server.hpp
engine/tests/: CMakeLists.txt  test_risk.cpp
infra/: .gitignore  .terraform.lock.hcl  engine.tf  ingress.tf  k8s_app.tf  main.tf  monitoring.tf  otel-values.yaml  outputs.tf  providers.tf  variables.tf  web-ui.tf
scripts/: prune-docr-tags.sh
src/: bus.hpp  main.cpp  md_binance.cpp  md_binance.hpp  oms_paper.cpp  oms_paper.hpp  persist_sqlite.cpp  risk.hpp  strategy_sma.hpp  types.hpp  ws_server.cpp
web-ui/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
web-ui/src/: App.tsx
web-ui/src/components/: PriceSpark.tsx  TickerTable.tsx
web-ui/src/hooks/: useWS.ts
